make it BC based

--- a/shared-helpers/src/locales/ar.json
+++ b/shared-helpers/src/locales/ar.json
@@ -91,7 +91,7 @@
   "application.ada.mobility": "للضعف الحركي",
   "application.ada.other": "للإعاقات الأخرى",
   "application.ada.subTitle": "إذا تم اختيارك لوحدة ما ، فسيعمل العقار على تلبية حاجتك إلى أقصى حد ممكن. إذا تم اختيار طلبك ، فاستعد لتقديم المستندات الداعمة من طبيبك.",
-  "application.ada.title": "هل أنت أو أي شخص في منزلك بحاجة إلى أي من ميزات الوصول ADA التالية؟",
+  "application.ada.title": "هل أنت أو أي شخص في منزلك بحاجة إلى أي من ميزات الوصول التالية؟",
   "application.ada.vision": "لضعف البصر",
   "application.alternateContact.contact.contactMailingAddressHelperText": "اختر عنوانًا يمكنهم من خلاله تلقي التحديثات والمواد المتعلقة بتطبيقك",
   "application.alternateContact.contact.contactMailingAddressLabel": "عنوان البريد الإلكتروني للاتصال",
@@ -165,7 +165,7 @@
   "application.contact.yourPhoneNumber": "رقم هاتفك",
   "application.contact.zip": "الرمز البريدي",
   "application.contact.zipCode": "الرمز البريدي",
-  "application.details.adaPriorities": "أولويات ADA المختارة",
+  "application.details.adaPriorities": "أولويات الوصول المختارة",
   "application.details.applicationStatus.declined": "مرفوض",
   "application.details.applicationStatus.draft": "مسودة",
   "application.details.applicationStatus.duplicate": "مكرر",
@@ -978,7 +978,7 @@
   "pageDescription.listing": "تقدم بطلب للحصول على سكن ميسور التكلفة في %{listingName} في %{regionName} ، تم بناؤه بالشراكة مع Exygy.",
   "pageDescription.welcome": "ابحث وتقدم للحصول على سكن ميسور التكلفة على بوابة إسكان %{regionName}",
   "pageTitle.accessibilityStatement": "بيان إمكانية الوصول",
-  "pageTitle.adaFeatures": "ميزات ADA",
+  "pageTitle.adaFeatures": "ميزات الوصول",
   "pageTitle.addHouseholdMembers": "إضافة أفراد الأسرة",
   "pageTitle.additionalResources": "مزيد من فرص السكن",
   "pageTitle.alternateContactDetails": "تفاصيل الاتصال البديلة",
