--- a/shared-helpers/src/locales/bn.json
+++ b/shared-helpers/src/locales/bn.json
@@ -87,11 +87,11 @@
   "account.viewFavorites": "পছন্দসই দেখুন",
   "alert.maintenance": "এই সাইটটি নির্ধারিত রক্ষণাবেক্ষণের অধীনে রয়েছে। যেকোনো অসুবিধার জন্য আমরা ক্ষমাপ্রার্থী।",
   "application.ada.hearing": "শ্রবণ প্রতিবন্ধকতার জন্য",
-  "application.ada.label": "ADA অ্যাক্সেসযোগ্য ইউনিট",
+  "application.ada.label": "অ্যাক্সেসযোগ্য ইউনিট",
   "application.ada.mobility": "গতিশীলতার প্রতিবন্ধকতার জন্য",
   "application.ada.other": "অন্যান্য প্রতিবন্ধকতার জন্য",
   "application.ada.subTitle": "যদি আপনি একটি ইউনিটের জন্য নির্বাচিত হন, তাহলে সম্পত্তি আপনার প্রয়োজন অনুযায়ী তাদের সামর্থ্য অনুযায়ী কাজ করবে। আপনার আবেদন নির্বাচন করা উচিত, আপনার চিকিত্সকের কাছ থেকে সহায়ক ডকুমেন্টেশন প্রদান করতে প্রস্তুত থাকুন।",
-  "application.ada.title": "আপনি বা আপনার পরিবারের কারও কি নিম্নলিখিত ADA অ্যাক্সেসিবিলিটি বৈশিষ্ট্যগুলির প্রয়োজন?",
+  "application.ada.title": "আপনি বা আপনার পরিবারের কারও কি নিম্নলিখিত অ্যাক্সেসিবিলিটি বৈশিষ্ট্যগুলির প্রয়োজন?",
   "application.ada.vision": "দৃষ্টি প্রতিবন্ধকতার জন্য",
   "application.alternateContact.contact.contactMailingAddressHelperText": "একটি ঠিকানা বেছে নিন যেখানে তারা আপনার আবেদন সম্পর্কে আপডেট এবং উপকরণ পেতে পারে",
   "application.alternateContact.contact.contactMailingAddressLabel": "যোগাযোগের ঠিকানা",
@@ -165,7 +165,7 @@
   "application.contact.yourPhoneNumber": "তোমার ফোন নম্বর",
   "application.contact.zip": "জিপ কোড",
   "application.contact.zipCode": "জিপকোড",
-  "application.details.adaPriorities": "ADA অগ্রাধিকারগুলি নির্বাচিত হয়েছে",
+  "application.details.adaPriorities": "অ্যাক্সেসিবিলিটি অগ্রাধিকারগুলি নির্বাচিত হয়েছে",
   "application.details.applicationStatus.declined": "প্রত্যাখ্যান করা হয়েছে",
   "application.details.applicationStatus.draft": "খসড়া",
   "application.details.applicationStatus.duplicate": "প্রতিলিপি",
@@ -978,7 +978,7 @@
   "pageDescription.listing": "Exygy- এর সাথে অংশীদারিতে নির্মিত %{regionName} এ %{লিগিংনাম} -এ সাশ্রয়ী মূল্যের আবাসনের জন্য আবেদন করুন।",
   "pageDescription.welcome": "%{RegionName} এর হাউজিং পোর্টালে সাশ্রয়ী মূল্যের আবাসনের জন্য অনুসন্ধান করুন এবং আবেদন করুন",
   "pageTitle.accessibilityStatement": "অ্যাক্সেসিবিলিটি স্টেটমেন্ট",
-  "pageTitle.adaFeatures": "ADA বৈশিষ্ট্য",
+  "pageTitle.adaFeatures": "অ্যাক্সেসিবিলিটি বৈশিষ্ট্য",
   "pageTitle.addHouseholdMembers": "পরিবারের সদস্যদের যোগ করুন",
   "pageTitle.additionalResources": "আরও আবাসনের সুযোগ",
   "pageTitle.alternateContactDetails": "বিকল্প যোগাযোগের বিবরণ",
