--- a/shared-helpers/src/locales/es.json
+++ b/shared-helpers/src/locales/es.json
@@ -87,11 +87,11 @@
   "account.viewFavorites": "Ver favoritos",
   "alert.maintenance": "Este sitio está en mantenimiento programado. Nos disculpamos por cualquier inconveniente.",
   "application.ada.hearing": "Para dificultades auditivas",
-  "application.ada.label": "Viviendas accesibles de conformidad con ADA",
+  "application.ada.label": "Viviendas accesibles",
   "application.ada.mobility": "Para dificultades en la movilidad",
   "application.ada.other": "Para otras discapacidades",
   "application.ada.subTitle": "Si usted es seleccionado para una vivienda, la propiedad hará todo lo posible para satisfacer sus necesidades. Si su solicitud fuera elegida, esté preparado para proporcionar documentación de apoyo de su médico.",
-  "application.ada.title": "¿Necesita usted o algún miembro de su hogar alguna de las siguientes funciones de accesibilidad de ADA?",
+  "application.ada.title": "¿Necesita usted o algún miembro de su hogar alguna de las siguientes funciones de accesibilidad?",
   "application.ada.vision": "Para dificultades en la visita",
   "application.alternateContact.contact.contactMailingAddressHelperText": "Elija una dirección en donde su contacto pueda recibir información actualizada y materiales relacionados con su solicitud",
   "application.alternateContact.contact.contactMailingAddressLabel": "Dirección postal del contacto",
@@ -165,7 +165,7 @@
   "application.contact.yourPhoneNumber": "Su número telefónico",
   "application.contact.zip": "Código postal",
   "application.contact.zipCode": "Código postal",
-  "application.details.adaPriorities": "Prioridades de la ADA seleccionadas",
+  "application.details.adaPriorities": "Prioridades de accesibilidad seleccionadas",
   "application.details.applicationStatus.declined": "Rechazada",
   "application.details.applicationStatus.draft": "Borrador",
   "application.details.applicationStatus.duplicate": "Duplicada",
@@ -978,7 +978,7 @@
   "pageDescription.listing": "Haga su solicitud de vivienda de precio accesible en %{listingName} en %{regionName}, construida en sociedad con Exygy.",
   "pageDescription.welcome": "Busque y haga su solicitud de vivienda de precio accesible en el Portal de vivienda de %{regionName}",
   "pageTitle.accessibilityStatement": "Declaración de accesibilidad",
-  "pageTitle.adaFeatures": "Características de la ADA",
+  "pageTitle.adaFeatures": "Características de accesibilidad",
   "pageTitle.addHouseholdMembers": "Agregar miembros del hogar",
   "pageTitle.additionalResources": "Más oportunidades de vivienda",
   "pageTitle.alternateContactDetails": "Datos de contacto alternativos",
