--- a/shared-helpers/src/locales/general.json
+++ b/shared-helpers/src/locales/general.json
@@ -87,11 +87,11 @@
   "account.viewFavorites": "View favorites",
   "alert.maintenance": "This site is undergoing scheduled maintenance. We apologize for any inconvenience.",
   "application.ada.hearing": "For hearing impairments",
-  "application.ada.label": "ADA accessible units",
+  "application.ada.label": "Accessible units",
   "application.ada.mobility": "For mobility impairments",
   "application.ada.other": "For other impairments",
   "application.ada.subTitle": "If you are selected for a unit, the property will work to accommodate your need to the best of their ability. Should your application be chosen, be prepared to provide supporting documentation from your physician.",
-  "application.ada.title": "Do you or anyone in your household need any of the following ADA accessibility features?",
+  "application.ada.title": "Do you or anyone in your household need any of the following accessibility features?",
   "application.ada.vision": "For vision impairments",
   "application.alternateContact.contact.contactMailingAddressHelperText": "Choose an address where they can receive updates and materials about your application",
   "application.alternateContact.contact.contactMailingAddressLabel": "Contact mailing address",
@@ -162,9 +162,9 @@
   "application.contact.yourAdditionalPhoneNumber": "Your second phone number",
   "application.contact.yourAddress": "Your address",
   "application.contact.yourPhoneNumber": "Your phone number",
-  "application.contact.zip": "Zip code",
-  "application.contact.zipCode": "Zipcode",
-  "application.details.adaPriorities": "ADA priorities selected",
+  "application.contact.zip": "Postal code",
+  "application.contact.zipCode": "Postal code",
+  "application.details.adaPriorities": "Accessibility priorities selected",
   "application.details.applicationStatus.declined": "Declined",
   "application.details.applicationStatus.draft": "Draft",
   "application.details.applicationStatus.duplicate": "Duplicate",
@@ -184,12 +184,12 @@
   "application.financial.income.validationError.reason.high": "Your household income is too high.",
   "application.financial.income.validationError.reason.low": "Your household income is too low.",
   "application.financial.vouchers.housingVouchers.strong": "Housing vouchers",
-  "application.financial.vouchers.housingVouchers.text": "like Section 8",
+  "application.financial.vouchers.housingVouchers.text": "like RAP or SAFER",
   "application.financial.vouchers.legend": "Housing vouchers, nontaxable income or rental subsidies",
   "application.financial.vouchers.nonTaxableIncome.strong": "Non-taxable income",
   "application.financial.vouchers.nonTaxableIncome.text": "like SSI, SSDI, child support payments, or worker's compensation benefits",
   "application.financial.vouchers.rentalSubsidies.strong": "Rental subsidies",
-  "application.financial.vouchers.rentalSubsidies.text": "like VASH, HSA, HOPWA, Catholic Charities, AIDS Foundation, etc.",
+  "application.financial.vouchers.rentalSubsidies.text": "like BC Housing subsidies, RGI, Canada-BC Housing Benefit, etc.",
   "application.financial.vouchers.title": "Do you or anyone on this application receive any of the following?",
   "application.form.general.saveAndFinishLater": "Save and finish later",
   "application.form.general.saveAndReturn": "Save and return to review",
@@ -578,7 +578,7 @@
   "errors.stateError": "Please enter a state",
   "errors.streetError": "Please enter an address",
   "errors.timeError": "Please enter a valid time",
-  "errors.zipCodeError": "Please enter a zip code",
+  "errors.zipCodeError": "Please enter a postal code",
   "finder.accessibility.question": "Do you or anyone in your household need any of the following accessibility features?",
   "finder.accessibility.subtitle": "Accessibility features include many designed specifically for residents with disabilities as well as a number of other building and unit amenities.",
   "finder.bedrooms.fourMoreBdrm": "4 or more bedrooms",
@@ -613,7 +613,7 @@
   "finder.rent.noMaxRent": "No maximum rent",
   "finder.rent.noMinRent": "No minimum rent",
   "finder.rent.question": "How much rent can you afford to pay?",
-  "finder.rent.section8": "Include rentals that accept Section 8 Housing Choice Vouchers",
+  "finder.rent.section8": "Include rentals that accept rental subsidies (RAP, SAFER, BC Housing)",
   "finder.rent.subtitle": "We will use your selections to find you rentals that may match your housing needs.",
   "finder.skip": "Skip this and show me listings",
   "footer.contact": "Contact",
@@ -809,7 +809,7 @@
   "listings.reservedCommunityType": "Reserved community type",
   "listings.reservedCommunityTypeDescriptions.developmentalDisability": "People with developmental disabilities",
   "listings.reservedCommunityTypeDescriptions.farmworkerHousing": "Farmworkers and their families",
-  "listings.reservedCommunityTypeDescriptions.housingVoucher": "HCV/Section 8 Voucher holders",
+  "listings.reservedCommunityTypeDescriptions.housingVoucher": "Rental subsidy recipients (RAP, SAFER, RGI)",
   "listings.reservedCommunityTypeDescriptions.schoolEmployee": "School employees",
   "listings.reservedCommunityTypeDescriptions.senior": "Seniors",
   "listings.reservedCommunityTypeDescriptions.senior55": "Seniors 55+",
@@ -819,7 +819,7 @@
   "listings.reservedCommunityTypeDescriptions.veteran": "Veterans",
   "listings.reservedCommunityTypes.developmentalDisability": "Developmental disability",
   "listings.reservedCommunityTypes.farmworkerHousing": "Farmworker housing",
-  "listings.reservedCommunityTypes.housingVoucher": "HCV/Section 8 Voucher",
+  "listings.reservedCommunityTypes.housingVoucher": "Rental Subsidy",
   "listings.reservedCommunityTypes.schoolEmployee": "School employee",
   "listings.reservedCommunityTypes.senior": "Seniors",
   "listings.reservedCommunityTypes.senior55": "Seniors 55+",
@@ -838,8 +838,8 @@
   "listings.reservedUnitsDescription": "In order to qualify for these units one of the following must apply to you or someone in your household:",
   "listings.reservedUnitsForWhoAre": "Reserved for %{communityType} who are %{reservedType}",
   "listings.search.subNote": "Enter full or partial listing name",
-  "listings.section8Acceptance": "Accepts Section 8 Housing Choice Vouchers",
-  "listings.section8VoucherInfo": "If you have a <strong>Section 8 Housing Choice Voucher</strong>, the income requirements do not apply and you will pay rent based on your income",
+  "listings.section8Acceptance": "Accepts rental subsidies (RAP, SAFER, RGI)",
+  "listings.section8VoucherInfo": "If you receive a <strong>rental subsidy</strong> (such as RAP, SAFER, or RGI), the income requirements may not apply and you may pay rent based on your income",
   "listings.sections.accessibilityFeatures": "Accessibility features",
   "listings.sections.additionalEligibilitySubtitle": "Applicants must also qualify under the rules of the building.",
   "listings.sections.additionalEligibilityTitle": "Additional eligibility rules",
@@ -860,7 +860,7 @@
   "listings.sections.neighborhoodSubtitle": "Location and transportation",
   "listings.sections.processSubtitle": "Important dates and contact information",
   "listings.sections.processTitle": "Process",
-  "listings.sections.rentalAssistanceSubtitle": "Housing Choice Vouchers, Section 8 and other valid rental assistance programs will be considered for this property. In the case of a valid rental subsidy, the required minimum income will be based on the portion of the rent that the tenant pays after use of the subsidy.",
+  "listings.sections.rentalAssistanceSubtitle": "RAP, SAFER, RGI and other valid rental assistance programs will be considered for this property. In the case of a valid rental subsidy, the required minimum income will be based on the portion of the rent that the tenant pays after use of the subsidy.",
   "listings.sections.rentalAssistanceTitle": "Rental assistance",
   "listings.sections.utilities": "Utilities included",
   "listings.sections.verification": "I verify that this listing data is valid",
@@ -974,7 +974,7 @@
   "pageDescription.listing": "Apply for affordable housing at %{listingName} in %{regionName}, built in partnership with Exygy.",
   "pageDescription.welcome": "Search and apply for affordable housing on %{regionName}'s Housing Portal",
   "pageTitle.accessibilityStatement": "Accessibility statement",
-  "pageTitle.adaFeatures": "ADA features",
+  "pageTitle.adaFeatures": "Accessibility features",
   "pageTitle.addHouseholdMembers": "Add household members",
   "pageTitle.additionalResources": "More housing opportunities",
   "pageTitle.alternateContactDetails": "Alternate contact details",
