--- a/shared-helpers/src/locales/tl.json
+++ b/shared-helpers/src/locales/tl.json
@@ -87,11 +87,11 @@
   "account.viewFavorites": "Tingnan ang mga paborito",
   "alert.maintenance": "Ang site na ito ay sumasailalim sa naka-iskedyul na pagpapanatili. Humihingi kami ng paumanhin para sa anumang abala.",
   "application.ada.hearing": "Para sa mga kapansanan sa pandinig",
-  "application.ada.label": "Mga naa-access na unit ng ADA",
+  "application.ada.label": "Mga naa-access na unit",
   "application.ada.mobility": "Para sa mga kapansanan sa kadaliang kumilos",
   "application.ada.other": "Para sa iba pang mga kapansanan",
   "application.ada.subTitle": "Kung napili ka para sa isang unit, ang property ay kikilos upang maibigay ang pangangailangan mo sa abot ng kanilang makakaya. Kapag napili ang application mo, maghanda para sa pagbibigay ng karagdagang dokumento mula sa iyong doktor.",
-  "application.ada.title": "Ikaw ba o ang sinuman sa sambahayan mo ay nangangailangan ng isa sa sumusunod na mga accessibility feature ng ADA?",
+  "application.ada.title": "Ikaw ba o ang sinuman sa sambahayan mo ay nangangailangan ng isa sa sumusunod na mga accessibility feature?",
   "application.ada.vision": "Para sa mga kapansanan sa paningin",
   "application.alternateContact.contact.contactMailingAddressHelperText": "Pumili ng address kung saan mo pwedeng matanggap ang mga update at materyal tungkol sa iyong application",
   "application.alternateContact.contact.contactMailingAddressLabel": "Mailing address ng contact",
@@ -165,7 +165,7 @@
   "application.contact.yourPhoneNumber": "Ang iyong numero ng telepono",
   "application.contact.zip": "Zip code",
   "application.contact.zipCode": "Zipcode",
-  "application.details.adaPriorities": "Pinili ang mga priyoridad ng ADA",
+  "application.details.adaPriorities": "Pinili ang mga priyoridad ng accessibility",
   "application.details.applicationStatus.declined": "Tinanggihan",
   "application.details.applicationStatus.draft": "Draft",
   "application.details.applicationStatus.duplicate": "Doble",
@@ -978,7 +978,7 @@
   "pageDescription.listing": "Mag-apply para sa abot-kayang pabahay sa %{listingName} sa %{regionName}, na binuo sa pakikipagtulungan ng Exygy.",
   "pageDescription.welcome": "Maghanap at mag-apply para sa abot-kayang pabahay sa Housing Portal ng %{regionName}.",
   "pageTitle.accessibilityStatement": "Pahayag ng pagiging naa-access",
-  "pageTitle.adaFeatures": "Mga tampok ng ADA",
+  "pageTitle.adaFeatures": "Mga tampok ng accessibility",
   "pageTitle.addHouseholdMembers": "Magdagdag ng mga miyembro ng sambahayan",
   "pageTitle.additionalResources": "Higit pang mga pagkakataon sa pabahay",
   "pageTitle.alternateContactDetails": "Mga kahaliling detalye ng contact",
