--- a/shared-helpers/src/locales/vi.json
+++ b/shared-helpers/src/locales/vi.json
@@ -87,11 +87,11 @@
   "account.viewFavorites": "Xem mục ưa thích",
   "alert.maintenance": "Trang web này đang được bảo trì theo lịch trình. Chúng tôi xin lỗi vì bất cứ sự bất tiện nào.",
   "application.ada.hearing": "Dành cho người khiếm thính",
-  "application.ada.label": "Các đơn vị có thể tiếp cận ADA",
+  "application.ada.label": "Các đơn vị có thể tiếp cận",
   "application.ada.mobility": "Dành cho người khuyết tật vận động",
   "application.ada.other": "Đối với các khiếm khuyết khác",
   "application.ada.subTitle": "Nếu quý vị được chọn cho một căn nhà, khu nhà sẽ làm việc để đáp ứng nhu cầu của quý vị trong khả năng tốt nhất của họ. Nếu đơn ghi danh của quý vị được chọn, hãy chuẩn bị cung cấp các tài liệu hỗ trợ từ bác sĩ của quý vị.",
-  "application.ada.title": "Quý vị hoặc bất kỳ ai trong gia đình quý vị có cần bất kỳ tính năng trợ năng của ADA nào sau đây không?",
+  "application.ada.title": "Quý vị hoặc bất kỳ ai trong gia đình quý vị có cần bất kỳ tính năng trợ năng nào sau đây không?",
   "application.ada.vision": "Đối với những người khiếm thị",
   "application.alternateContact.contact.contactMailingAddressHelperText": "Chọn một địa chỉ nơi họ có thể nhận các thông tin cập nhật và tài liệu về đơn ghi danh của quý vị",
   "application.alternateContact.contact.contactMailingAddressLabel": "Địa chỉ thư bưu điện của người liên lạc",
@@ -165,7 +165,7 @@
   "application.contact.yourPhoneNumber": "Số điện thoại của bạn",
   "application.contact.zip": "Mã bưu chính",
   "application.contact.zipCode": "Số zipcode",
-  "application.details.adaPriorities": "Ưu tiên ADA đã chọn",
+  "application.details.adaPriorities": "Ưu tiên trợ năng đã chọn",
   "application.details.applicationStatus.declined": "Đã từ chối",
   "application.details.applicationStatus.draft": "Bản nháp",
   "application.details.applicationStatus.duplicate": "Trùng lặp",
@@ -978,7 +978,7 @@
   "pageDescription.listing": "Ghi danh nhà ở giá phải chăng tại %{listingNam} ở %{regionName}, được xây dựng với sự hợp tác của Exygy.",
   "pageDescription.welcome": "Tìm kiếm và ghi danh nhà ở giá cả phải chăng trên Cổng thông tin về Gia cư tại %{regionName}",
   "pageTitle.accessibilityStatement": "Tuyên bố về khả năng truy cập",
-  "pageTitle.adaFeatures": "Các tính năng của ADA",
+  "pageTitle.adaFeatures": "Các tính năng trợ năng",
   "pageTitle.addHouseholdMembers": "Thêm thành viên hộ gia đình",
   "pageTitle.additionalResources": "Nhiều cơ hội nhà ở hơn",
   "pageTitle.alternateContactDetails": "Thông tin liên lạc thay thế",
