--- a/shared-helpers/src/locales/zh.json
+++ b/shared-helpers/src/locales/zh.json
@@ -87,11 +87,11 @@
   "account.viewFavorites": "查看收藏夹",
   "alert.maintenance": "该网站正在进行定期维护。很抱歉给您带来不便。",
   "application.ada.hearing": "对于听力障碍",
-  "application.ada.label": "ADA 无障碍单元",
+  "application.ada.label": "无障碍单元",
   "application.ada.mobility": "对于行动障碍",
   "application.ada.other": "对于其他损伤",
   "application.ada.subTitle": "如果您被選中可得到一個單位，有關物業將會竭盡所能配合您的需求。如果您的申請被選中，請準備好提供醫生的證明文件。",
-  "application.ada.title": "您或家中有任何人需要以下任何 ADA 無障礙設施嗎？",
+  "application.ada.title": "您或家中有任何人需要以下任何無障礙設施嗎？",
   "application.ada.vision": "对于视力障碍",
   "application.alternateContact.contact.contactMailingAddressHelperText": "請選擇一個他們可收到您最新申請消息和資料的地址",
   "application.alternateContact.contact.contactMailingAddressLabel": "联系邮寄地址",
@@ -165,7 +165,7 @@
   "application.contact.yourPhoneNumber": "您的电话号码",
   "application.contact.zip": "邮政编码",
   "application.contact.zipCode": "郵遞區號",
-  "application.details.adaPriorities": "ADA 优先选择",
+  "application.details.adaPriorities": "无障碍优先选择",
   "application.details.applicationStatus.declined": "已拒絕",
   "application.details.applicationStatus.draft": "草稿",
   "application.details.applicationStatus.duplicate": "重複",
@@ -978,7 +978,7 @@
   "pageDescription.listing": "申請在 %{regionName} 的 %{listingName}（與 Exygy 合作興建）可負擔房屋。",
   "pageDescription.welcome": "在 %{regionName} 的房屋網站搜尋並申請可負擔房屋",
   "pageTitle.accessibilityStatement": "无障碍声明",
-  "pageTitle.adaFeatures": "ADA 功能",
+  "pageTitle.adaFeatures": "无障碍功能",
   "pageTitle.addHouseholdMembers": "添加家庭成员",
   "pageTitle.additionalResources": "更多住房机会",
   "pageTitle.alternateContactDetails": "备用联系方式",
