continue french implementation

--- a/shared-helpers/src/locales/general.json
+++ b/shared-helpers/src/locales/general.json
@@ -637,6 +637,7 @@
   "languages.bn": "বাংলা",
   "languages.en": "English",
   "languages.es": "Español",
+  "languages.fr": "Français",
   "languages.tl": "Filipino",
   "languages.vi": "Tiếng Việt",
   "languages.zh": "中文",
