--- a/shared-helpers/src/locales/es.json
+++ b/shared-helpers/src/locales/es.json
@@ -624,8 +624,8 @@
   "footer.content.applicationQuestions": "Si tiene preguntas sobre el listado y la solicitud, comuníquese con el agente de arrendamiento que aparece en el listado.",
   "footer.content.partnership": "en asociación con",
   "footer.content.programQuestions": "Para consultas generales sobre el programa, puede llamar al MOHD al 123-456-7890.",
-  "footer.content.projectOf": "Bloomington Housing Portal es un proyecto de la",
-  "footer.copyright": "© Ciudad y condado de Bloomington",
+  "footer.content.projectOf": "BC Housing Portal es un proyecto de",
+  "footer.copyright": "© BC Housing",
   "footer.disclaimer": "Exención de responsabilidades",
   "footer.forGeneralQuestions": "Si requiere información general sobre el programa, nos puede llamar al 000-000-0000.",
   "footer.giveFeedback": "Proporcione sus comentarios",
