--- a/shared-helpers/src/locales/fr.json
+++ b/shared-helpers/src/locales/fr.json
@@ -620,8 +620,8 @@
   "footer.content.applicationQuestions": "Pour les questions sur les annonces et les demandes, veuillez contacter l'agent de location affiché sur l'annonce.",
   "footer.content.partnership": "en partenariat avec",
   "footer.content.programQuestions": "Pour les demandes générales sur le programme, vous pouvez appeler le MOHD au 123-456-7890.",
-  "footer.content.projectOf": "Le portail du logement de Bloomington est un projet de",
-  "footer.copyright": "© Ville et comté de Bloomington",
+  "footer.content.projectOf": "Le portail de BC Housing est un projet de",
+  "footer.copyright": "© BC Housing",
   "footer.disclaimer": "Avertissement",
   "footer.forGeneralQuestions": "Pour les demandes générales sur le programme, vous pouvez nous appeler au 000-000-0000.",
   "footer.giveFeedback": "Donner un avis",
@@ -1009,7 +1009,7 @@
   "progressNav.completed": "terminé",
   "progressNav.notCompleted": "non terminé",
   "progressNav.srHeading": "Progrès",
-  "region.name": "Bloomington",
+  "region.name": "Colombie-Britannique",
   "seasons.fall": "Automne",
   "seasons.spring": "Printemps",
   "seasons.summer": "Été",
