--- a/shared-helpers/src/locales/vi.json
+++ b/shared-helpers/src/locales/vi.json
@@ -624,8 +624,8 @@
   "footer.content.applicationQuestions": "Đối với các câu hỏi về danh sách và đơn đăng ký, vui lòng liên hệ với Đại lý cho thuê được hiển thị trên danh sách.",
   "footer.content.partnership": "hợp tác với",
   "footer.content.programQuestions": "FNếu có thắc mắc chung về chương trình, bạn có thể gọi MOHD theo số 123-456-7890.",
-  "footer.content.projectOf": "Cổng thông tin nhà ở Bloomington là một dự án của",
-  "footer.copyright": "© Thành phố & Quận Bloomington",
+  "footer.content.projectOf": "Cổng thông tin BC Housing là một dự án của",
+  "footer.copyright": "© BC Housing",
   "footer.disclaimer": "Tuyên bố miễn trừ trách nhiệm",
   "footer.forGeneralQuestions": "Đối với các yêu cầu chung về chương trình, bạn có thể gọi cho chúng tôi theo số 000-000-0000.",
   "footer.giveFeedback": "Đưa ra phản hồi",
