--- a/shared-helpers/src/locales/general.json
+++ b/shared-helpers/src/locales/general.json
@@ -620,8 +620,8 @@
   "footer.content.applicationQuestions": "For listing and application questions, please contact the Leasing Agent displayed on the listing.",
   "footer.content.partnership": "in partnership with",
   "footer.content.programQuestions": "For general program inquiries, you may call MOHD at 123-456-7890.",
-  "footer.content.projectOf": "Bloomington Housing Portal is a project of the",
-  "footer.copyright": "© City & County of Bloomington",
+  "footer.content.projectOf": "BC Housing Portal is a project of",
+  "footer.copyright": "© BC Housing",
   "footer.disclaimer": "Disclaimer",
   "footer.forGeneralQuestions": "For general program inquiries, you may call us at 000-000-0000.",
   "footer.giveFeedback": "Give feedback",
@@ -1009,7 +1009,7 @@
   "progressNav.completed": "completed",
   "progressNav.notCompleted": "not completed",
   "progressNav.srHeading": "Progress",
-  "region.name": "Bloomington",
+  "region.name": "British Columbia",
   "seasons.fall": "Fall",
   "seasons.spring": "Spring",
   "seasons.summer": "Summer",
