fix seed, change brand name

--- a/shared-helpers/src/locales/general.json
+++ b/shared-helpers/src/locales/general.json
@@ -968,7 +968,7 @@
   "nav.signInMFA.verifyByPhone": "Verify with phone number",
   "nav.signInMFA.verifyTitle": "Verify that it's you",
   "nav.signOut": "Sign out",
-  "nav.siteTitle": "Housing Portal",
+  "nav.siteTitle": "Home Hub",
   "nav.viewListings": "View listings",
   "pageDescription.additionalResources": "We encourage you to browse other affordable housing resources.",
   "pageDescription.getAssistance": "Learn more about finding and applying for affordable rental opportunities, and find additional housing listings.",
